--- a/index.html
+++ b/index.html
@@ -310,5 +310,12 @@
   foot.innerHTML = `<div class="panel hide" id="footInfo"><div class="tiny"><strong>Permit trigger:</strong> New paving & hardscape additions over <b>120 sf</b> require a paving permit (Zoning Clearance). <span id="permitLine" class="muted"></span></div></div>`;
   document.body.appendChild(foot);
 </script>
+<p class="tiny" style="margin-top:10px;text-align:center;">
+  <a href="https://www.herculesca.gov/home/showpublisheddocument/18190/638844704384000000"
+     target="_blank" rel="noopener noreferrer">
+    📄 Download the Paving Permit (PDF)
+  </a>
+</p>
+
 </body>
 </html>
